--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,14 +76,24 @@ dependencies {
     implementation developmentDependencies.support_design
     implementation developmentDependencies.support_cardview_v7
     implementation developmentDependencies.constraint_layout
-    implementation developmentDependencies.appmsg
-    implementation(developmentDependencies.glide) {
-        exclude group: "com.android.support"
-    }
+//    implementation(developmentDependencies.glide) {
+//        exclude group: "com.android.support"
+//    }
     implementation developmentDependencies.jsoup
     implementation developmentDependencies.commons_text
     implementation developmentDependencies.crop
     implementation developmentDependencies.rich_editor
     implementation developmentDependencies.smartrefresh
     implementation developmentDependencies.smartrefresheader
+    implementation developmentDependencies.rxjava
+    implementation developmentDependencies.rxandroid
+    implementation developmentDependencies.retrofit
+    implementation developmentDependencies.retrofit_rxjava
+    implementation developmentDependencies.retrofit_gson
+    implementation developmentDependencies.cookiejar
+    implementation developmentDependencies.glide
+    implementation developmentDependencies.okhttp
+    implementation developmentDependencies.okhttp_logging
+
+
 }
