--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,5 +94,7 @@ dependencies {
     implementation developmentDependencies.okhttp
     implementation developmentDependencies.okhttp_logging
     implementation developmentDependencies.flyco
+    implementation 'com.zhy:okhttputils:2.6.2'
+
 
 }
