--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.CommentTablayoutActivity"></activity>
+        <activity android:name=".activity.DragActivity"></activity>
+        <activity android:name=".activity.RVActivity" />
+        <activity android:name=".activity.CommentTablayoutActivity" />
         <activity android:name=".activity.RxNetActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
