--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Mar 09 11:20:54 CST 2017
-android.useDeprecatedNdk=true
+#android.useDeprecatedNdk=true
+org.gradle.jvmargs=-Xmx512m
